🐛 Fix font sizing on mobile for about me and work experience page

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -5,7 +5,7 @@ div.about-me {
   overflow: hidden;
 
   h1 {
-    font-size: 48pt;
+    font-size: 42pt;
     margin: 0;
     position: relative;
     font-family: 'Garment';
